Add CHANGELOG.md entry